--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4          70    usa                ford torino  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "id": "5d79f1cf",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "ac306190",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
       "\n",
       "The variable data type float64 indicates that it stores numeric values \n",
       "as a 64-bit floating point numbers - this allows for decimal values \n",
-      "and a wider range of precision compared to a 32-bit floating point number\n"
+      "and a wider range of precision compared to a 32-bit floating point or an integer number\n"
      ]
     }
    ],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 78,
    "id": "9f034a5d",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
        "6            70    usa          chevrolet impala  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 79,
    "id": "1b91233e",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 80,
    "id": "732784d8",
    "metadata": {},
    "outputs": [
@@ -609,12 +609,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "399225f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here..."
+    "# Your answer here...\n",
+    "# Split the mpg_data dataset into 75% training data and 25% test data\n",
+    "mpg_train, mpg_test = train_test_split(\n",
+    "    mpg_data, train_size=0.75, random_state=42\n",
+    ")"
    ]
   },
   {
@@ -627,14 +631,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "ac1e1117",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      predictor     slope  intercept\n",
+      "0     cylinders -0.160143 -15.047371\n",
+      "1  displacement  0.000373 -15.047371\n",
+      "2    horsepower -0.001899 -15.047371\n",
+      "3        weight -0.006457 -15.047371\n",
+      "4  acceleration  0.057588 -15.047371\n",
+      "5    model_year  0.762270 -15.047371\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here ...\n",
+    "# Selecting all the numeric predictor variables (excluding the first column and last 2 columns of training set)\n",
+    "numeric_predictors = mpg_train.iloc[:, 1:-2]\n",
+    "target_variable = mpg_train[\"mpg\"]\n",
     "\n",
-    "numeric_predictors = 🤷‍♂️\n",
+    "# Fit the model\n",
+    "lm = LinearRegression()\n",
+    "lm.fit(numeric_predictors, target_variable)\n",
     "\n",
     "\n",
     "# Create a DataFrame containing the slope (coefficients) and intercept\n",
@@ -665,12 +688,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "ffefa9f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.185474951339161"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here ..."
+    "# Your code here ...\n",
+    "\n",
+    "# Select only the original columns by name, i.e removing columns 'mpg', 'name', 'origin' & 'predicted'\n",
+    "original_columns = [col for col in mpg_test.columns if col not in ['mpg', 'name', 'predicted', 'origin']]\n",
+    "\n",
+    "mpg_test[\"predicted\"] = lm.predict(mpg_test[original_columns])\n",
+    "\n",
+    "# Calculate RMSPE for the multivariable model.\n",
+    "lm_mult_test_RMSPE = mean_squared_error(\n",
+    "    y_true=mpg_test[\"mpg\"],\n",
+    "    y_pred=mpg_test[\"predicted\"]\n",
+    ")**(1/2)\n",
+    "\n",
+    "lm_mult_test_RMSPE"
    ]
   },
   {
